# taplo_fmt

./: .editorconfig  .taplo.toml  Cargo.toml  LICENSE  README.md  dprint.json  jsr.jsonc  justfile  package.json  rust-toolchain.toml
extra/: taplo_fmt_esm.js  taplo_fmt_node.js  taplo_fmt_options.d.ts  taplo_fmt_vite.js  taplo_fmt_web.d.ts  taplo_fmt_web.js
scripts/: doc.d.ts  package.mjs  patch.mjs
src/: lib.rs  tests.rs  ts_type.rs
test_bun/: bun.spec.ts
test_deno/: deno.test.ts
test_node/: test-node.mjs
test_snapshots/: taplo_fmt__tests__format@align_composite_entries__input.toml.snap  taplo_fmt__tests__format@align_composite_entries__input.toml.snap.toml  taplo_fmt__tests__format@array_collapse__input.toml.snap  taplo_fmt__tests__format@array_collapse__input.toml.snap.toml  taplo_fmt__tests__format@array_max_new_lines__input.toml.snap  taplo_fmt__tests__format@array_max_new_lines__input.toml.snap.toml  taplo_fmt__tests__format@array_no_trailing_comma__input.toml.snap  taplo_fmt__tests__format@array_no_trailing_comma__input.toml.snap.toml  taplo_fmt__tests__format@comment_after_entry__input.toml.snap  taplo_fmt__tests__format@comment_before_entry__input.toml.snap  taplo_fmt__tests__format@comment_before_entry__input.toml.snap.toml  taplo_fmt__tests__format@comment_indentation__input.toml.snap  taplo_fmt__tests__format@comment_indentation__input.toml.snap.toml  taplo_fmt__tests__format@indent_entries__input.toml.snap  taplo_fmt__tests__format@multiple_comments__input.toml.snap  taplo_fmt__tests__format@multiple_comments__input.toml.snap.toml  (+43 more)
(+56 files in other folders)
