[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "A WASM based TOML Formatter"
edition     = "2024"
homepage    = "https://github.com/wasm-fmt/taplo_fmt"
keywords    = ["wasm", "taplo", "TOML", "formatter"]
license     = "MIT"
name        = "taplo_fmt"
readme      = "README.md"
repository  = "https://github.com/wasm-fmt/taplo_fmt"
version     = "0.2.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
getrandom          = { version = "0.3", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6"
taplo              = { version = "0.14", features = ["serde"] }
wasm-bindgen       = "0.2"

[dev-dependencies]
insta      = { version = "1", features = ["glob"] }
serde_json = "1"

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = "symbols"
